# 6ProgeDrone

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml
config/: mavros_blacklist.yaml  mavros_config.yaml
docs/: dependances_install.md  docker_usage.md  fiducial_navigation.md  optical_flow.md  visual_navigation_basics.md
launch/: custom_mavros.launch  uav_simulator.launch
scripts/: board_generator.py  install_ros_tools_for_uav.sh  kill_px4.sh  start_mavros.sh  start_sim.sh  start_sim_docker.sh  stop_sim.sh
scripts/examples/: aruco_board.py  block_matching_flow.py  find_pattern_image.py  object_tracking.py  phase_corr_flow.py  show_image.py  single_aruco.py
sim/models/aruco_board/: model.config  model.sdf
sim/models/aruco_board/textures/: aruco_board.material
sim/models/navigation_cam/: model.config  navigation_cam.sdf
sim/models/rangefinder/: model.config  model.sdf
sim/models/uav_vision/: model.config  uav_vision.sdf
sim/worlds/: aruco_world.world
src/: uav_circle_fly_example.cpp  visual_navigation_node (копия).cpp  visual_navigation_node.cpp  visual_navigation_node_test.cpp
